--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,43 @@
-<div class="text-center">
-    <button type="button" class="btn btn-primary m-2" (click)="newForm('changePassword')">Change Password</button>
-    <button type="button" class="btn btn-primary m-2" (click)="newForm('changeNominee')">Change Nominee</button>
-    <button type="button" class="btn btn-primary m-2" (click)="newForm('redemption')">Redemption</button>
-    <hr>
-</div>
-
-<div class="container ipad">
+<div class="container-fluid">
     <div class="row">
-        <div class="col">
-            <h3 class="text-center m-3">{{ model.name }}</h3>
-            <form [formGroup]="form" (ngSubmit)="submit(model)">
-                <formly-form [form]="form" [fields]="fields" [model]="model">
-                    <button type="submit" class="btn btn-success m-1 float-right">Submit</button>
-                    <button type="button" class="btn btn-danger m-1 float-right">Cancel</button>
-                </formly-form>
-            </form>
+        <div class="col-3">
+            <div class="row">
+                <div class="col">
+                    <app-menutest></app-menutest>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="btn btn-primary m-2" (click)="newForm('changePassword')">Change Password</button><br>
+                    <button type="button" class="btn btn-primary m-2" (click)="newForm('changeNominee')">Change Nominee</button><br>
+                    <button type="button" class="btn btn-primary m-2" (click)="newForm('redemption')">Redemption</button>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <hr>
+        <div class="col-9">
+            <div class="ipad">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="m-3">{{ model.name }}</h3>
+                        <form [formGroup]="form" (ngSubmit)="submit(model)">
+                            <formly-form [form]="form" [fields]="fields" [model]="model">
+                                <button type="submit" [disabled]="form.invalid" class="btn btn-success m-1 float-right">Submit</button>
+                                <button type="button" class="btn btn-danger m-1 float-right">Cancel</button>
+                            </formly-form>
+                        </form>
+                    </div>
+                </div>
 
-    <div class="row">
-        <div class="col">
-            <h4 class="text-center">Current model state</h4>
-            {{ model | json }}
+                <hr>
+
+                <div class="row">
+                    <div class="col">
+                        <h4 class="text-center">Current model state</h4>
+                        {{ model | json }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
